--- a/README
+++ b/README
@@ -91,3 +91,5 @@ Major components:
 * jQuery: MIT/GPL license
 * HTML5Doctor CSS reset: Creative Commons 3.0
 * CSS Reset Reloaded: Public Domain
+
+MODIFICADO POR PIEDRUCCI
